add privacy/terms/app-ads.txt for store cupang_33

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -11,56 +11,95 @@
     a{color:#7aa2ff;text-decoration:none}
     .muted{color:#9aa5d1}
     .card{background:#121833;border:1px solid #223066;border-radius:12px;padding:18px}
+    .badge{display:inline-block;margin:8px 0 0;padding:6px 10px;border:1px solid #223066;border-radius:8px;background:#0e1430;color:#b9c8ff;font-weight:700}
+    ul{margin:8px 0 0 18px}
   </style>
 </head>
 <body>
   <h1>개인정보처리방침</h1>
-  <div class="muted">최종 업데이트: 2025-08-27</div>
+  <div class="muted">최종 업데이트: 2025-09-10</div>
   <div class="card">
-    <p><strong>happy24</strong>(이하 “앱”)는 이용자의 개인정보를 소중히 보호합니다. 본 방침은 앱이 수집·이용하는 정보, 처리위탁, 보관기간 및 이용자의 권리를 설명합니다.</p>
+    <p class="badge">BigEyes는 고객 개인정보를 서버에 <u>저장하지 않습니다</u>.</p>
+    <p><strong>해피24(happy24)</strong> (이하 “회사” 또는 “앱”)는 이용자의 개인정보를 소중히 보호합니다. 본 방침은 수집 항목, 이용 목적, 국외 이전, 보관 기간, 이용자 권리와 행사 방법, 청소년 보호 정책 등을 설명합니다.</p>
 
-    <h2>1. 수집하는 항목 및 수집 방법</h2>
+    <h2>1. 수집하는 항목 및 방법</h2>
     <ul>
-      <li><strong>이미지/텍스트</strong>: 사용자가 요약을 위해 업로드하거나 촬영한 이미지(및 그에서 추출된 텍스트).</li>
-      <li><strong>기기 정보(비식별)</strong>: 광고 노출/부정사용 방지 목적의 비식별 정보(AdMob SDK 수집 항목에 한함).</li>
+      <li><strong>이미지/텍스트</strong>: 이용자가 요약을 위해 업로드하거나 촬영한 이미지 및 그로부터 추출된 텍스트</li>
+      <li><strong>광고 식별자 등 비식별 정보</strong>: 광고 제공·부정 사용 방지 목적의 기기/앱 정보(AdMob SDK가 수집하는 범위)</li>
     </ul>
+    <p class="muted">※ 회원가입/로그인 기능이 없어 이름, 이메일, 전화번호 등 직접 식별 정보는 수집하지 않습니다.</p>
 
     <h2>2. 이용 목적</h2>
     <ul>
-      <li>이미지 속 작은 글씨 인식(OCR) 및 <strong>요약 결과 제공</strong></li>
-      <li>서비스 운영 및 품질 개선(오류 분석 등)</li>
-      <li>광고 제공(리워드/전면/배너)</li>
+      <li>작은 글씨 인식(OCR) 및 요약 결과 제공</li>
+      <li>서비스 운영, 오류 분석 및 품질 개선</li>
+      <li>광고(보상형/전면/배너) 제공</li>
     </ul>
 
-    <h2>3. 제3자 제공 및 처리위탁</h2>
+    <h2>3. 처리의 법적 근거</h2>
     <ul>
-      <li><strong>OpenAI</strong> (미국): 이미지에서 텍스트 인식·요약을 위해 <em>업로드된 이미지가 OpenAI API</em>로 전송·처리됩니다.</li>
-      <li><strong>Google AdMob</strong>: 광고 노출 및 보상형 광고 집행.</li>
+      <li>서비스 제공을 위한 필수 처리(계약의 이행)</li>
+      <li>이용자 동의(이미지 업로드, 광고 노출 등)</li>
+      <li>정상적인 서비스 운영에 필요한 정당한 이익(오류 대응, 보안)</li>
     </ul>
-    <p class="muted">※ 위탁사는 서비스 제공에 필요한 범위 내에서만 데이터를 처리합니다.</p>
 
-    <h2>4. 보관 기간</h2>
+    <h2>4. 제3자 제공 및 처리위탁</h2>
     <ul>
-      <li>앱 서버는 <strong>요약 결과와 원본 이미지·텍스트를 저장하지 않으며</strong>, 처리 완료 후 즉시 파기됩니다.</li>
-      <li>단, 법령상 보관이 필요한 경우 해당 규정에 따릅니다.</li>
+      <li><strong>OpenAI, L.L.C. (미국)</strong>: 업로드된 이미지가 AI 분석 및 요약 생성을 위해 OpenAI API로 전송·처리됩니다.</li>
+      <li><strong>Google AdMob (Google LLC, 미국)</strong>: 광고 노출 및 보상형 광고 제공을 위한 SDK 운영</li>
     </ul>
+    <p class="muted">※ 위탁사는 서비스 제공에 필요한 범위에서만 처리하며, 회사는 계약상·기술적·관리적 보호조치를 취합니다.</p>
 
-    <h2>5. 이용자 권리</h2>
+    <h2>5. 국외 이전</h2>
     <ul>
-      <li>개인정보 열람·정정·삭제 요청 및 처리정지 요구가 가능합니다.</li>
-      <li>문의: <a href="mailto:contact@example.com">2018.happy24@gmail.com</a></li>
+      <li><strong>이전 대상</strong>: OpenAI, Google LLC</li>
+      <li><strong>이전 국가</strong>: 미국</li>
+      <li><strong>이전 항목</strong>: (OpenAI) 업로드된 이미지/텍스트, 모델 응답 생성에 필요한 최소 정보 / (AdMob) 광고 제공을 위한 비식별 기기·이용 정보</li>
+      <li><strong>이전 시점/방법</strong>: 네트워크 전송(암호화) — 서비스 이용 시점</li>
+      <li><strong>보관 및 파기</strong>: 회사 서버는 원본 이미지/요약을 저장하지 않으며, OpenAI/Google의 보관은 각 사의 정책에 따릅니다.</li>
     </ul>
 
-    <h2>6. 기기 권한</h2>
+    <h2>6. 보관 기간 및 파기</h2>
+    <ul>
+      <li><strong>회사 서버</strong>: 원본 이미지 및 요약 결과를 저장하지 않으며, 처리 완료 후 즉시 파기합니다.</li>
+      <li>법령상 보관 의무가 있는 경우 해당 기간 보관 후 즉시 안전하게 파기합니다.</li>
+    </ul>
+
+    <h2>7. 이용자 권리 및 행사 방법</h2>
+    <ul>
+      <li>개인정보 열람·정정·삭제·처리정지 요구 및 동의 철회가 가능합니다.</li>
+      <li>문의: <a href="mailto:2018.happy24@gmail.com">2018.happy24@gmail.com</a></li>
+    </ul>
+
+    <h2>8. 아동의 개인정보</h2>
+    <p>본 서비스는 <strong>만 14세 미만을 대상으로 하지 않습니다</strong>. 만 14세 미만 이용자는 법정대리인의 동의 없이 서비스를 이용할 수 없습니다.</p>
+
+    <h2>9. 기기 권한</h2>
     <ul>
       <li><strong>카메라</strong>: 사진 촬영을 통한 이미지 업로드</li>
       <li><strong>저장공간</strong>: 파일 선택/업로드</li>
     </ul>
 
-    <h2>7. 쿠키 및 유사기술</h2>
-    <p>웹앱 동작 및 광고/분석(AdMob)에 한하여 쿠키/식별자가 사용될 수 있습니다.</p>
+    <h2>10. 쿠키·광고식별자 및 맞춤형 광고</h2>
+    <ul>
+      <li>웹앱 동작 및 광고 제공을 위해 쿠키/광고식별자(AAID)가 사용될 수 있습니다.</li>
+      <li><strong>맞춤형 광고 제어</strong>: Android 설정 → Google → 광고 → 광고 ID 재설정 / 맞춤형 광고 선택 해제</li>
+    </ul>
 
-    <h2>8. 변경</h2>
+    <h2>11. 안전성 확보 조치</h2>
+    <ul>
+      <li>전송 구간 암호화(HTTPS), 최소 수집·최소 보관 원칙</li>
+      <li>접근 권한 통제 및 로그 모니터링(개인 식별 정보 저장 없음)</li>
+    </ul>
+
+    <h2>12. 개인정보 보호책임자</h2>
+    <ul>
+      <li>담당: 해피24 (happy24)</li>
+      <li>이메일: <a href="mailto:2018.happy24@gmail.com">2018.happy24@gmail.com</a></li>
+      <li>주소: (선택 입력)</li>
+    </ul>
+
+    <h2>13. 변경</h2>
     <p>본 방침은 법령·서비스 변경 시 업데이트되며, 변경사항은 본 페이지에 공지됩니다.</p>
   </div>
 
