--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,10 @@ textarea.summary-box{
     <p style="text-align:center;margin:8px 0 0">
       <span id="creditTop" class="credit">(이용 가능 건수 : 0000건)</span>
     </p>
+    <p class="small" style="text-align:center;margin:2px 0 0">
+      <a href="/privacy.html">개인정보처리방침</a> · <a href="/terms.html">이용약관</a>
+    </p>
+
   </section>
 
   <!-- STEP 1: 업로드 -->
@@ -98,7 +102,7 @@ textarea.summary-box{
       <button id="btnAnalyze" class="btn hidden">🔍 작은 글씨 요약</button>
       <button id="btnCoupangFlow" class="btn secondary hidden">🛒 쿠팡 최저가 가기</button>
     </div>
-    <p class="small">※ 같은 사진에 대해 OCR은 한 번만 차감됩니다.</p>
+    <p class="small">※ 본 링크는 쿠팡 파트너스 활동으로 일정 수수료를 받을 수 있습니다</p>
   </section>
 
   <!-- STEP 2-A: 보고서(읽기 전용) -->
