--- a/public/terms.html
+++ b/public/terms.html
@@ -10,40 +10,64 @@
     h2{font-size:18px;margin:24px 0 8px}
     a{color:#7aa2ff;text-decoration:none}
     .card{background:#121833;border:1px solid #223066;border-radius:12px;padding:18px}
+    ul{margin:8px 0 0 18px}
   </style>
 </head>
 <body>
   <h1>이용약관</h1>
   <div class="card">
     <h2>제1조 (목적)</h2>
-    <p>본 약관은 happy24(이하 “회사”)가 제공하는 서비스의 이용조건·절차 및 권리·의무를 규정함을 목적으로 합니다.</p>
+    <p>본 약관은 해피24(happy24, 이하 “회사”)가 제공하는 BigEyes 서비스의 이용조건·절차 및 권리·의무를 규정함을 목적으로 합니다.</p>
 
     <h2>제2조 (서비스 내용)</h2>
     <ul>
-      <li>이미지의 작은 글씨 인식 및 요약 결과 제공</li>
-      <li>보상형/전면/배너 광고 제공</li>
+      <li>이미지의 작은 글씨 인식(OCR) 및 요약 결과 제공</li>
+      <li>쿠팡 파트너스 연동 검색 링크 제공</li>
+      <li>광고(보상형/전면/배너) 제공</li>
     </ul>
 
     <h2>제3조 (이용자의 의무)</h2>
     <ul>
-      <li>타인의 권리를 침해하는 이미지·정보를 업로드하지 않습니다.</li>
-      <li>서비스의 비정상적 이용/자동화 시도/역공학을 금지합니다.</li>
+      <li>타인의 권리(저작권·초상권·개인정보)를 침해하는 이미지·정보를 업로드하지 않습니다.</li>
+      <li>서비스의 비정상적 이용, 자동화 시도, 역공학을 금지합니다.</li>
+      <li>법령 및 본 약관, 안내사항을 준수합니다.</li>
     </ul>
 
     <h2>제4조 (지식재산권)</h2>
-    <p>서비스 및 결과물에 대한 지식재산권은 회사 및 정당한 권리자에게 귀속됩니다.</p>
+    <p>서비스 및 결과물에 관한 권리는 회사 및 정당한 권리자에게 귀속됩니다. 이용자는 결과물을 법령과 본 약관에 따라 개인적 용도로만 사용할 수 있습니다.</p>
 
-    <h2>제5조 (광고 및 수익)</h2>
-    <p>회사는 서비스 운영을 위해 광고를 게재할 수 있으며, 광고 노출/보상형 광고 참여 시 이용자에게 안내된 혜택이 제공될 수 있습니다.</p>
+    <h2>제5조 (개인정보 보호)</h2>
+    <p>회사는 회원 가입을 받지 않으며, 서버에 고객 개인정보를 저장하지 않습니다. 기타 사항은 <a href="/privacy.html">개인정보처리방침</a>을 따릅니다.</p>
 
-    <h2>제6조 (책임의 한계)</h2>
-    <p>요약 결과는 참고용입니다. 회사는 결과의 정확성·완전성·적합성에 대해 보증하지 않으며, 이용으로 인해 발생한 손해에 대해 고의 또는 중대한 과실이 없는 한 책임을 지지 않습니다.</p>
+    <h2>제6조 (광고 및 제휴 고지)</h2>
+    <ul>
+      <li>회사는 서비스 운영을 위해 광고를 게재할 수 있습니다.</li>
+      <li>쿠팡 파트너스 등 제휴 링크를 통해 회사가 수수료를 받을 수 있습니다(이용자 비용 변동 없음).</li>
+    </ul>
 
-    <h2>제7조 (약관 변경)</h2>
-    <p>회사는 필요 시 약관을 변경할 수 있으며, 변경 사항은 공지 후 적용합니다. 이용자는 변경 이후 서비스 이용으로 동의한 것으로 봅니다.</p>
+    <h2>제7조 (서비스 제공의 변경·중단)</h2>
+    <ul>
+      <li>회사는 서비스 개선, 점검, 장애, 정책 변경, 천재지변 등 사유가 있는 경우 서비스 전부 또는 일부를 변경·중단할 수 있습니다.</li>
+      <li>회사는 고의 또는 중대한 과실이 없는 한 이로 인한 손해에 대해 책임을 지지 않습니다.</li>
+    </ul>
 
-    <h2>제8조 (문의)</h2>
-    <p>문의: <a href="mailto:contact@example.com">2018.happy24@gmail.com</a></p>
+    <h2>제8조 (책임의 한계)</h2>
+    <p>요약 결과는 참고용이며, 정확성·완전성·적합성에 대해 보증하지 않습니다. 회사는 이용으로 발생한 손해에 대하여 회사의 고의 또는 중대한 과실이 없는 한 책임을 지지 않습니다.</p>
+
+    <h2>제9조 (연령)</h2>
+    <p>본 서비스는 만 14세 미만을 대상으로 하지 않습니다.</p>
+
+    <h2>제10조 (준거법 및 관할)</h2>
+    <p>본 약관은 대한민국 법령을 준거법으로 하며, 서비스와 관련하여 회사와 이용자 사이에 분쟁이 발생한 경우 관할법원은 대한민국 법원으로 합니다.</p>
+
+    <h2>제11조 (약관의 게시 및 변경)</h2>
+    <ul>
+      <li>회사는 본 약관을 서비스 내에 게시합니다.</li>
+      <li>회사는 필요 시 약관을 변경할 수 있으며, 변경 사항은 공지 후 적용합니다. 이용자는 변경 이후 서비스 이용으로 동의한 것으로 봅니다.</li>
+    </ul>
+
+    <h2>제12조 (문의)</h2>
+    <p>해피24(happy24) · 이메일: <a href="mailto:2018.happy24@gmail.com">2018.happy24@gmail.com</a></p>
   </div>
 
   <p style="margin-top:24px"><a href="/privacy.html">개인정보처리방침</a> · <a href="/">홈으로</a></p>
